frontend/test/should_fail/method_model_inh_ovrrd_failnp.grg
#using "method_model_inh_ovrrd_failnp.gm"
